:lipstick: Changed fixed value to negative spacing token

--- a/packages/next-templates/src/components/TopTask/TopTaskCard.css
+++ b/packages/next-templates/src/components/TopTask/TopTaskCard.css
@@ -9,7 +9,7 @@
 .example-toptask-card__icon .voorbeeld-icon-clock {
   --utrecht-icon-color: var(--voorbeeld-color-violet-800);
   --utrecht-icon-size: var(--voorbeeld-size-icon-3xl);
-  margin-inline-start: -5px;
+  margin-inline-start: calc(var(--voorbeeld-space-inline-ant) * -1);
 }
 
 .example-toptask-card__icon .voorbeeld-icon-clock {
